# beetsmith

./: .gitattributes  .gitignore  DEVELOPER.md  README.md  beet.json  icon.xcf  max_damage.py  plugin.py  pyproject.toml  setup.py  spyglass.json  test.py  test.yaml
.github/workflows/: publish.yml
beetgear/: __init__.py  components.py  core.py  models.py
beetgear/_internal/: lib.py
beetsmith/: __init__.py  calc.py  core.py  helpers.py  io.py  models.py  parsing.py  plugin.py  recipes.py  text_components.py  validation.py
beetsmith/_internal/: lib.py
beetsmith/assets/: right_click_ability.py
beetsmith/core/: __init__.py  classes.py  compat.py  models.py  resourcelocations.py  text_components.py
beetsmith/templates/: core.py  skyblock.py
beetsmith/toolchain/: NEW parser.py  OLD parser.py  beet.py  file.py  parser.py  plugin.py
beetsmith/typewriter/: __init__.py  core.py  skyblock.py  templates.py
beetsmith/v1/core/: classes backup.py.OFF  classes.py  models.py
beetsmith/v1/resources/: right_click_ability.py
beetsmith/v1/toolchain/: __init__.py  plugin.py
beetsmith/v2/: components.py  resourcelocations.py
beetsmith/v2/core/: compat.py  components.py  resourcelocations.py  text_components.py
beetsmith/v2/toolchain/: file.py  plugin.py
customitemlib/: __init__.py  beet_integration.py  components.py  customitem.py  lib.py
customitemlib/templates/: skyblock.py
example/: beet.yml  plugin.py  test.py
rework/: beet.json  generate.py
src/customitem/: aspect_of_the_dragons.yaml  test copy.yaml
test/: plugin.py
vanadium/: pack.mcmeta
(+126 files in other folders)
